style: prevent mobile horizontal scroll when left sidebar is open

--- a/algorea.css
+++ b/algorea.css
@@ -12,6 +12,9 @@ body {
    /*overflow-y: scroll;*/
    overflow-x: auto;
 }
+body.mobile-layout.sidebar-left-open {
+  overflow-x: hidden;
+}
 
 /*
  * Header colors
